; ModuleID = '/home/carl/AnghaBench/i3/i3bar/src/extr_ipc.c_got_output_event.c'
source_filename = "/home/carl/AnghaBench/i3/i3bar/src/extr_ipc.c_got_output_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [19 x i8] c"Got output event!\0A\00", align 1
@I3_IPC_MESSAGE_TYPE_GET_OUTPUTS = common dso_local global i32 0, align 4
@config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@I3_IPC_MESSAGE_TYPE_GET_WORKSPACES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @got_output_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @got_output_event(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 @DLOG(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %4 = load i32, i32* @I3_IPC_MESSAGE_TYPE_GET_OUTPUTS, align 4
  %5 = call i32 @i3_send_msg(i32 %4, i32* null)
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @config, i32 0, i32 0), align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @I3_IPC_MESSAGE_TYPE_GET_WORKSPACES, align 4
  %10 = call i32 @i3_send_msg(i32 %9, i32* null)
  br label %11

11:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @DLOG(i8*) #1

declare dso_local i32 @i3_send_msg(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
